Remove references to LoRa KPN server.

--- a/latest/connectors/index.html
+++ b/latest/connectors/index.html
@@ -162,7 +162,7 @@
 <p><a href="https://hub.docker.com/search/?q=concava">Search on 'ConCaVa' in the Docker Hub</a> for all connectors.</p>
 <p>The following connectors are available:</p>
 <ul>
-<li><a href="https://github.com/kukua/concava-lora-connector">LoRa Connector</a>. Handles the XML from LoRa KPN webhook.</li>
+<li><a href="https://github.com/kukua/concava-lora-connector">LoRa Connector</a>. Handles LoRa XML (from a KPN server webhook for example).</li>
 <li><a href="https://github.com/kukua/concava-mqtt-connector">MQTT Connector</a>.</li>
 <li><a href="https://github.com/kukua/concava-spul-connector">SPUL Connector</a>. SPUL stands for <em>Sensor Protocol Ultra Light</em>. A protocol developed by <a href="http://sodaq.com/">Sodaq</a>. Documentation will be available soon.</li>
 </ul>
