--- a/latest/index.html
+++ b/latest/index.html
@@ -159,6 +159,12 @@
             <div class="section">
               
                 <h1 id="concava">ConCaVa</h1>
+<!-- TODO:
+- Write it for developers
+- Ask Auke or Jan Willem for an example non-linear to linear calibrator
+    http://www.mstarlabs.com/sensors/thermocouple-calibration.html
+-->
+
 <p><strong>Binary payload processor for Converting, Calibrating, and Validating dynamic sensor data.</strong></p>
 <p>For contributing, providing feedback, or support go to the <a href="https://github.com/kukua/concava">Github repository</a>.<br />
 Also see the <a href="https://rawgit.com/kukua/concava-intro/master/index.html">functional and technical introduction (slides)</a>.<br />
@@ -208,5 +214,5 @@ A demo page is <a href="https://github.com/kukua/concava-demo">coming soon</a>.<
 
 <!--
 MkDocs version : 0.14.0
-Build Date UTC : 2015-12-10 16:47:24.346146
+Build Date UTC : 2015-12-17 12:56:20.302502
 -->
