--- a/latest/use-cases/index.html
+++ b/latest/use-cases/index.html
@@ -163,7 +163,7 @@
                 <h1 id="use-cases">Use cases</h1>
 <p>This chapter provides various use cases for ConCaVa.</p>
 <h2 id="lora-weather-stations">LoRa weather stations</h2>
-<p>The LoRa KPN server provides bloated XML, containing the payload hex and unique device ID. By using binary data, the payload size can be reduced from ~400 bytes of XML to ~40 bytes of binary data. ConCaVa helps processing this data.</p>
+<p>LoRa provides bloated XML, containing the payload hex and unique device ID. By using binary data, the payload size can be reduced from ~400 bytes of XML to ~40 bytes of binary data. ConCaVa helps processing this data.</p>
 <p>More information can be found in the <a href="https://rawgit.com/kukua/concava-intro/master/index.html#/3">introduction slides</a>.</p>
               
             </div>
