Add custom MKDocs theme and improve build process.

--- a/latest/contribute/index.html
+++ b/latest/contribute/index.html
@@ -167,7 +167,7 @@ npm install
 npm test
 </code></pre>
 
-<p>You can also contact use via email at <a href="mailto:info@kukua.cc">info@kukua.cc</a>.</p>
+<p>You can also contact use via email at <a href="mailto:dev@kukua.cc">dev@kukua.cc</a>.</p>
               
             </div>
           </div>
