--- a/latest/index.html
+++ b/latest/index.html
@@ -166,9 +166,11 @@
 -->
 
 <p><strong>Binary payload processor for Converting, Calibrating, and Validating dynamic sensor data.</strong></p>
-<p>For contributing, providing feedback, or support go to the <a href="https://github.com/kukua/concava">Github repository</a>.<br />
-Also see the <a href="https://rawgit.com/kukua/concava-intro/master/index.html">functional and technical introduction (slides)</a>.<br />
-A demo page is <a href="https://github.com/kukua/concava-demo">coming soon</a>.</p>
+<p>For contributing, providing feedback, or support go to the <a href="https://github.com/kukua/concava">Github repository</a>.
+Also see the <a href="https://rawgit.com/kukua/concava-intro/master/index.html">functional and technical introduction (slides)</a>.</p>
+<!--
+A demo page is [coming soon](https://github.com/kukua/concava-demo).
+-->
               
             </div>
           </div>
@@ -214,5 +216,5 @@ A demo page is <a href="https://github.com/kukua/concava-demo">coming soon</a>.<
 
 <!--
 MkDocs version : 0.14.0
-Build Date UTC : 2016-01-19 11:40:59.098052
+Build Date UTC : 2016-06-21 07:15:42.034577
 -->
