--- a/latest/quick-start/index.html
+++ b/latest/quick-start/index.html
@@ -365,6 +365,11 @@ Content-Length: 0
   }
 }
 </code></pre>
+
+<div class="admonition note">
+    <p class="first admonition-title">Tip</p>
+    <p class="last">Use <a href="https://stedolan.github.io/jq/tutorial/" target="_blank">jq</a> for displaying JSON data.</p>
+</div>
               
             </div>
           </div>
